# vector

./: .gitignore  Cargo.toml  Makefile  build.rs  funcs.txt  history.bash  res.txt  test_sqlite_service.sh
.cargo/: config.toml
.github/actions/spelling/: expect.txt
.github/workflows/: changes.yml  ci-integration-review.yml  integration.yml  semantic.yml
config/: config.yaml  metric.txt  sqlite-example.yaml  vector.yaml
coverage/: lcov.info
docs/tutorials/sinks/: 1_basic_sink.md
lib/agent-common/: Cargo.toml
lib/agent-common/src/: config.rs  finalization.rs  id.rs  json_size.rs  lib.rs  shutdown.rs
lib/agent-config/: Cargo.toml
lib/agent-config-common/: Cargo.toml
lib/agent-config-common/src/: human_friendly.rs  validation.rs
lib/agent-config-macros/: Cargo.toml
lib/agent-config-macros/src/: component_name.rs  configurable.rs  configurable_component.rs  lib.rs
lib/agent-config-macros/src/ast/: container.rs  field.rs  mod.rs  util.rs  variant.rs
lib/agent-config/src/: configurable.rs  lib.rs  metadata.rs  named.rs  num.rs  stdlib.rs  str.rs
lib/agent-config/src/component/: description.rs
lib/agent-config/src/schema/: helpers.rs  mod.rs
lib/agent-config/src/schema/parser/: component.rs  query.rs
lib/agent-config/src/schema/visitors/: human_name.rs  inline_single.rs  merge.rs  scoped_visit.rs  unevaluated.rs
lib/agent-core/: Cargo.toml  README.md
lib/agent-core/proto/: event.proto
lib/agent-core/src/: buffer.rs  componentkey.rs  lib.rs  serde.rs
lib/agent-lib/: Cargo.toml
lib/agent-lib/src/: lib.rs
lib/codecs/: Cargo.toml
lib/codecs/src/: lib.rs
lib/enrichment/src/: find_enrichment_table_records.rs  get_enrichment_table_record.rs  lib.rs  tables.rs  vrl_util.rs
lib/file-source/: Cargo.toml
lib/file-source/src/: buffer.rs  checkpointer.rs  file_server.rs  fingerprinter.rs  lib.rs
lib/k8s-e2e-tests/: Cargo.toml
lib/portpicker/src/: lib.rs
lib/tracing-limit/: Cargo.toml
lib/tracing-limit/src/: lib.rs
lib/vector-api-client/src/: lib.rs
lib/vector-buffers/: Cargo.toml
lib/vector-buffers/src/: buffer_usage_data.rs  config.rs  encoding.rs  internal_events.rs  lib.rs
lib/vector-common/: Cargo.toml
lib/vector-common/src/: config.rs  constants.rs  finalization.rs  finalizer.rs  lib.rs  request_metadata.rs  sensitive_string.rs  shutdown.rs
lib/vector-config/: Cargo.toml
lib/vector-config-common/src/: human_friendly.rs  validation.rs
lib/vector-config-macros/: Cargo.toml
lib/vector-config-macros/src/: configurable_component.rs
lib/vector-config/src/: lib.rs
lib/vector-core/: Cargo.toml
lib/vector-core/src/: buffer.rs  fanout.rs  lib.rs  serde.rs  sink.rs  time.rs  vrl.rs
lib/vector-lib/: Cargo.toml
lib/vector-lib/src/: lib.rs
lib/vector-stream/src/: driver.rs  expiration_map.rs  lib.rs  partitioned_batcher.rs
lib/vector-tap/: Cargo.toml
lib/vector-tap/src/: controller.rs  lib.rs  notification.rs
proto/: calc.proto  query.proto
src/: app.rs  app_event.rs  async_read.rs  cli.rs  convert_config.rs  dns.rs  encoding_transcode.rs  extra_context.rs  generate.rs  heartbeat.rs  http.rs  lib.rs  line_agg.rs  main.rs  serde.rs  signal.rs  sink_ext.rs  stats.rs  template.rs  trace.rs
src/api/: mod.rs
src/api/schema/: filter.rs
src/buffers/: buffer_usage_data.rs  config.rs  mod.rs  receiver.rs  sender.rs
src/buffers/topology/: builder.rs
src/buffers/variants/: in_memory.rs  mod.rs
src/codecs/: mod.rs  ready_frames.rs
src/codecs/decoding/: decoder.rs  mod.rs
src/codecs/encoding/: config.rs  encoder.rs  mod.rs  transformer.rs
src/common/: datadog.rs  mod.rs
src/common/http/: error.rs
src/components/validation/: mod.rs
src/conditions/: datadog_search.rs  is_log.rs  is_metric.rs  is_trace.rs  mod.rs  vrl.rs
src/config/: builder.rs  cmd.rs  compiler.rs  diff.rs  dot_graph.rs  enrichment_table.rs  format.rs  graph.rs  mod.rs  schema.rs  sink.rs  source.rs  transform.rs  validation.rs  vars.rs  watcher.rs
src/config/loading/: config_builder.rs  loader.rs  mod.rs
src/config/unit_test/: mod.rs
src/config_macros/: configurable.rs  mod.rs
src/core/: fanout.rs  global_options.rs  mod.rs  rpc_cli.rs  rpc_service.rs  sink.rs
src/enrichment_tables/: enrichment.rs  file.rs  geoip.rs  mmdb.rs  mod.rs
src/enrichment_tables/memory/: table.rs
src/internal_event/: events_received.rs  events_sent.rs  mod.rs
src/internal_events/: codecs.rs  common.rs  file.rs  host_metrics.rs  http.rs  mod.rs  open.rs  parser.rs  prelude.rs  process.rs  tcp.rs  unix.rs
src/proto/: calc.rs  query.rs
src/secrets/: mod.rs
src/sinks/: mod.rs  prelude.rs
src/sinks/blackhole/: config.rs  mod.rs
src/sinks/console/: config.rs  sink.rs
src/sinks/databend/: config.rs
src/sinks/file/: bytes_path.rs  mod.rs
src/sinks/http/: config.rs
src/sinks/postgres/: config.rs  mod.rs
src/sinks/prometheus/: exporter.rs  mod.rs
src/sinks/sqlite/: mod.rs
src/sinks/util/: auth.rs  batch.rs  builder.rs  compressor.rs  datagram.rs  encoding.rs  expiring_hash_map.rs  http.rs  mod.rs  normalizer.rs  partitioner.rs  processed_event.rs  request_builder.rs  retries.rs  service.rs  sink.rs  snappy.rs  sqlite_service.rs  statistic.rs  tcp.rs  unix.rs  uri.rs
src/source_sender/: mod.rs
src/sources/: demo_logs.rs  file.rs  mod.rs  static_metrics.rs
src/sources/exec/: mod.rs
src/sources/file_descriptors/: file_descriptor.rs  mod.rs  stdin.rs
src/sources/host_metrics/: cgroups.rs  cpu.rs  disk.rs  filesystem.rs  memory.rs  mod.rs  network.rs  process.rs  tcp.rs
src/sources/util/: framestream.rs  mod.rs  wrappers.rs
src/test_util/: mod.rs
src/topology/: builder.rs  controller.rs  mod.rs  ready_arrays.rs  running.rs  schema.rs  task.rs
src/topology/test/: mod.rs  reload.rs
src/transforms/: metric_to_log.rs  mod.rs  remap.rs
src/transforms/sample/: config.rs  mod.rs
src/transforms/tag_cardinality_limit/: mod.rs  tag_value_set.rs
src/transforms/window/: transform.rs
tests/: sqlite_service_integration.rs
tests/integration/: shutdown.rs
util/: inspect_db.sh  test_rpc_protocol.sh
(+163 files in other folders)
