[package]
name = "agent-config-macros"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
serde_derive_internals = "0.29"
syn = { version = "2.0", default-features = false, features = ["full", "extra-traits", "visit-mut", "visit"] }
agent-config-common = { path = "../agent-config-common" }

[dev-dependencies]
serde.workspace = true
agent-config = { path = "../agent-config" }
