[package]
name = "agent-config"
edition = "2021"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
encoding_rs = { version = "0.8", default-features = false, features = ["alloc", "serde"] }
indexmap.workspace = true
inventory = { version = "0.3" }
no-proxy = { version = "0.3.6", default-features = false, features = ["serialize"] }
num-traits = { version = "0.2.19", default-features = false }
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.14.0", default-features = false, features = ["std"] }
snafu.workspace = true
toml.workspace = true
tracing = { version = "0.1.34", default-features = false }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
http = { version = "0.2.9", default-features = false }
vrl.workspace = true
agent-config-common = { path = "../agent-config-common" }
agent-config-macros = { path = "../agent-config-macros" }

[dev-dependencies]
assert-json-diff = { version = "2", default-features = false }
serde_with = { version = "3.14.0", default-features = false, features = ["std", "macros"] }
