[package]
name = "agent-lib"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
agent-common = { path = "../agent-common" }
agent-config = { path = "../agent-config" }
agent-core = { path = "../agent-core", default-features = false }
vrl = { workspace = true, optional = true }

[features]
proptest = []
test = []
vrl = ["agent-core/vrl", "dep:vrl"]
