[package]
name = "vector-lib"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
codecs = { path = "../codecs", default-features = false }
enrichment = { path = "../enrichment" }
file-source = { path = "../file-source", optional = true }
vector-buffers = { path = "../vector-buffers", default-features = false }
vector-common = { path = "../vector-common" }
vector-config = { path = "../vector-config" }
vector-core = { path = "../vector-core", default-features = false }
vector-lookup = { path = "../vector-lookup", features = ["test"] }
vector-stream = { path = "../vector-stream" }
vrl = { workspace = true, optional = true }

[features]
file-source = ["dep:file-source"]
proptest = []
syslog = ["codecs/syslog"]
test = []
vrl = ["vector-core/vrl", "dep:vrl"]
